Allow prod frontend origin for CORS